# JavaScriptCore-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/hooks/: allow-all.py
docs/: 000-jsc-responsibility-map.md  001-rust-design-skeleton.md  002-bfs-rewrite-plan.md  003-octane-dependency-map.md  ROADMAP.md  STATUS.md  ai-agent-workflow.md  jsc-status-tree.md  progress.md
docs/design/: baseline-call-tier-divergence.md  baseline-dispatch.md  baseline-property-ic.md  dfg-path.md  gc-r4-batch5.md  gc-r4-completion.md  gc-r4.md  ic-resident-provenance.md  jit-runtime-bridge.md  jsstack.md  main-agent-principles.md  scoreboard.md  structures-as-cells.md
examples/: octane_probe.rs
mcts_mem/: javascriptcore.md
mcts_mem/javascriptcore/: assembler.md  b3.md  baseline-jit.md  builtin-objects.md  builtins-codegen.md  bytecode.md  c-api.md  dfg.md  ftl.md  heap.md  inspector-debugger.md  interpreter.md  intl-and-dates.md  llint.md  object-model.md  parser.md  profiler.md  runtime.md  value-representation.md  wasm.md  wtf-platform.md  yarr.md
src/: lib.rs
src/api/: callbacks.rs  exception.rs  handles.rs  lock.rs  mod.rs  protect.rs
src/assembler/: arm64_encoder.rs  labels.rs  link_records.rs  macro_assembler_arm64.rs  mod.rs  operands.rs  registers.rs
src/b3/: mod.rs
src/builtins/: ids.rs  intrinsics.rs  mod.rs  names.rs  registry.rs
src/bytecode/: code_block.rs  debug.rs  executable.rs  gc.rs  generator.rs  ic.rs  instruction.rs  instruction_stream.rs  integration.rs  metadata.rs  mod.rs  opcode.rs  operands.rs  origin.rs  profiling.rs  register.rs  speculated_type.rs
src/bytecompiler/: mod.rs
src/debugger/: mod.rs
src/dfg/: frozen_value.rs  graph.rs  mod.rs  node_flags.rs  node_type.rs  osr.rs  osr_exit.rs  parser.rs  plan.rs  speculation.rs  variable_access_data.rs  watchpoint.rs
src/disassembler/: mod.rs
src/domjit/: mod.rs
src/ftl/: lowering.rs  mod.rs
src/fuzzilli/: mod.rs
src/gc/: barrier.rs  cell.rs  conservative_roots.rs  fast_hash.rs  heap.rs  machine_stack_marker.rs  mod.rs  phase.rs  refs.rs  snapshot.rs  space.rs  trace.rs  visitor.rs  weak.rs
src/generator/: mod.rs
src/inspector/: mod.rs
src/interpreter/: bigint_store.rs  mod.rs  object_store.rs  string_store.rs  symbol_store.rs
src/jit/: abi.rs  arm64_baseline.rs  assembly_helpers.rs  baseline.rs  code.rs  disassembly.rs  emission.rs  emitter.rs  executable.rs  executable_allocator.rs  generated_metrics.rs  ic.rs  integration.rs  jit_code_map.rs  machine.rs  mod.rs  operations.rs  plan.rs  semantics.rs  stub_routines.rs  tiering.rs  unsafe_platform_boundary.rs  watchpoint.rs
src/llint/: dispatch.rs  entrypoint.rs  exception.rs  handoff.rs  mod.rs  slow_path.rs
src/lol/: mod.rs
src/modules/: graph.rs  host.rs  key.rs  loader.rs  mod.rs  record.rs  registry.rs  request.rs
src/object/: auxiliary.rs  butterfly_handle.rs  identity.rs  indexing_type.rs  mod.rs  operations.rs  property.rs  property_offset.rs  property_table.rs  storage.rs  structure.rs  structure_cell.rs  structure_transition_table.rs  watchpoint.rs
src/offlineasm/: mod.rs
src/platform/: executable_memory.rs  executable_memory_compartment.rs  mod.rs  unix_arm64_jsc_stack_dispatch.rs  unix_executable_memory.rs
src/profiler/: mod.rs
src/runtime/: array.rs  collection.rs  date.rs  error_object.rs  exception.rs  function.rs  gc.rs  interpreter.rs  intl.rs  iterator.rs  jobs.rs  js_type.rs  json.rs  mod.rs  promise.rs  property.rs  proxy.rs  realm.rs  regexp.rs  scope.rs  state.rs  temporal.rs  typed_array.rs
src/shell/: mod.rs  octane.rs
src/strings/: atom.rs  mod.rs  property_key.rs  string.rs  string_impl.rs  symbol.rs
src/syntax/: arena.rs  ast.rs  lexer.rs  mod.rs  parser.rs  semantic.rs  source.rs  token.rs
src/tools/: mod.rs
src/ucd/: mod.rs
src/value/: conversion.rs  mod.rs  repr.rs
src/vm/: arm64_native_entry.rs  call_frame_storage.rs  call_link.rs  code_blocks.rs  config.rs  entry.rs  entry_frame_storage.rs  exceptions.rs  executables.rs  generated_executor.rs  generated_metrics.rs  jsstack.rs  mod.rs  native_reentry.rs  property_handoff.rs  runtime.rs  side_exit.rs  tiering.rs  vm_roots.rs
src/wasm/: bridge.rs  compile.rs  debugger.rs  execution.rs  instance.rs  memory.rs  mod.rs  module.rs  table.rs
src/wtf/: mod.rs  stack_bounds.rs
src/yarr/: bytecode.rs  execution.rs  jit.rs  matching.rs  mod.rs  parse.rs  simple_exec.rs  unicode.rs
tools/bytecode-gen/: README.md  generate.rb
tools/octane-parity/: compute_r.py  octane_driver.js  run_cpp_baseline.sh  (+1 more)
tools/s4_arena_proto/: Cargo.toml
tools/s4_arena_proto/src/: lib.rs
(+702 files in other folders)
