[package]
name = "javascriptcore"
version = "0.0.0"
edition = "2021"
license = "BSD-2-Clause"
publish = false

[dependencies]

[features]
# Off-by-default gate for the ARM64 native-entry "admission proof" cluster
# (vm/native_reentry/arm64_admission + its sub-modules, the arm64_native_entry
# stack-dispatch/publication/frame-materialization proof submodules, and the
# GC/JIT salvage modules they exercise: stub_routines, vm_roots,
# heap/conservative_scan, heap/marking, visitor/collector_effects,
# visitor/conservative_marking, visitor/verifier). This apparatus has no C++
# JSC counterpart on the live path; it is reachable only from these gated
# proof entry points and #[cfg(test)] code, so it is excluded from the default
# build. Gating (not deleting) preserves the GC/JIT salvage for future
# baseline-JIT/GC work, which DOES map to real WebKit C++ counterparts.
arm64_native_entry_proof = []

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

# Optimized profile for trustworthy perf comparison against local C++ JSC.
# C++ JSC (JSCOnly Release) is built fully optimized + LTO, so a faithful
# parity measurement requires the Rust engine to be comparably optimized.
# `debug = 1` keeps line tables for profiler breakdowns of interpreter hot ops.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 1
